// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header "Select All" checkbox should render a "Select All" checkbox on header when onToggleAll callback provided 1`] = `
<form
  className="tc-list-checkbox theme-tc-list-checkbox"
>
  <div
    className="checkbox"
  >
    <label
      htmlFor="myList-header-check"
    >
      <input
        checked={false}
        disabled={false}
        id="myList-header-check"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="tc-header-checkbox"
      >
        <span
          className="sr-only"
        >
          Select All
        </span>
      </span>
    </label>
  </div>
</form>
`;

exports[`Header "Select All" checkbox should render unchecked & disabled checkbox on header when there is no items 1`] = `
<form
  className="tc-list-checkbox theme-tc-list-checkbox"
>
  <div
    className="checkbox"
  >
    <label
      htmlFor="myList-header-check"
    >
      <input
        checked={false}
        disabled={true}
        id="myList-header-check"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="tc-header-checkbox"
      >
        <span
          className="sr-only"
        >
          Select All
        </span>
      </span>
    </label>
  </div>
</form>
`;
